fix overflow-x 4 dylan

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,8 +29,8 @@ a:hover {
 .App {
   height: 100vh;
   width: 100vw;
-
   background: $dark-bg;
+  overflow-x: hidden;
 }
 
 .Container {
@@ -41,6 +41,7 @@ a:hover {
   height: 100%;
   margin: auto;
   background: $bg;
+  overflow-x: hidden;
 }
 
 .Header {
